@@ -1,3 +1,7 @@
+2016-05-16 0.8.1 alpha
+Finish the particle system.
+It should become a part of SMELT someday.
+
 2016-05-15 0.8.1 alpha
 Initial stubs for the particle system.
 Use layouts in the effects window.
